# cursor-learning-harness

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  DOCS.md  README.md  _db_check.py  install.bat  install.sh  pyproject.toml  run_sentiment_arc.py  setup-hooks.ps1  setup-hooks.sh  skills-lock.json  verify_gpu.py
.cursor/: hooks.json  llm.env.example
.cursor/hooks/: after_agent_response.py  after_agent_thought.py  after_file_edit.py  after_mcp_execution.py  after_shell_execution.py  after_tab_file_edit.py  before_mcp_execution.py  before_read_file.py  before_shell_execution.py  before_submit_prompt.py  before_tab_file_read.py  check_sentiment.py  check_status.py  cleanup_sessions.py  conftest.py  conversation_recorder.py  conversation_summarizer_agent.py  debug_hook.py  learning_analyzer.py  learning_rules_agent.py  learning_rules_langgraph.py  narratives_db.py  post_tool_use.py  post_tool_use_failure.py  pre_compact.py  pre_tool_use.py  requirements.txt  run-hook.ps1  run-hook.sh  run-hooks.bat  sentiment_arc_trigger.py  session_end.py  session_start.py  stop.py  subagent_start.py  subagent_stop.py  summarize_sessions.py  summarizer_agent.py  summarizer_daemon.py  summarizer_daemon_launcher.py  (+4 more)
.cursor/plans/: conversation-level_summaries_68abdae3.plan.md  hooks_system_evaluation_inconsistencies_and_required_changes_e32d092b.plan.md  langgraph_learning_rules_agent_0ad8b120.plan.md  sentiment_arc_accuracy_improvements_c0913f0d.plan.md  structured_3308c639.plan.md  (+1 more)
.github/: repo-metadata.json
assets/: convert_svg.py  generate_graphics.py
(+67 files in other folders)
